<resources>
    <string name="app_name">KanaGuess</string>
    <string name="title_kana">Kana</string>
    <string name="title_settings">No settings yet, check back in future updates!</string>
    <string name="title_about">Made by Abhay Cashikar. Version 1.0</string>
    <string name="nav_kana">Kana</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="title_header">Select the kana you want to practice, then press \"Start\"!</string>
    <string name="hiragana">Hiragana</string>
    <string name="check_a">あいうえお</string>
    <string name="check_ka">かきくけこ</string>
    <string name="check_sa">さしすせそ</string>
    <string name="check_ta">たちつてと</string>
    <string name="check_na">なにぬねの</string>
    <string name="check_ha">はひふへほ</string>
    <string name="check_ma">まみむめも</string>
    <string name="check_ya">やゆよ</string>
    <string name="check_ra">らりるれろ</string>
    <string name="check_wa">わをん</string>
    <string name="katakana">Katakana</string>
    <string name="kcheck_a">アイウエオ</string>
    <string name="kcheck_ka">カキクケコ</string>
    <string name="kcheck_sa">サシスセソ</string>
    <string name="kcheck_ta">タチツテト</string>
    <string name="kcheck_na">ナニヌネノ</string>
    <string name="kcheck_ha">ハヒフヘホ</string>
    <string name="kcheck_ma">マミムメモ</string>
    <string name="kcheck_ya">ヤユヨ</string>
    <string name="kcheck_ra">ラリルレロ</string>
    <string name="kcheck_wa">ワヲン</string>
    <string name="start">Start!</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="kana_test">T</string>
    <string name="guess">Guess</string>
    <string name="end_session">End Session</string>
    <string name="enter_the_pronunciation">Enter the pronunciation</string>
    <string name="correct_0">Correct: 0</string>
    <string name="incorrect_0">Incorrect: 0</string>
    <string name="results_header">Final Score: 0%</string>
    <string name="missed_kana">Missed Kana:</string>
    <string name="try_again">Try Again</string>
    <string name="back_to_start">Back to Start</string>
</resources>
